# NeoBot

./: .gitignore  Bot.py  CONTRIBUTING.md  README.md  pyproject.toml
app/: pyproject.toml
app/src/neobot_app/: bootstrap.py  bot_detect.py  favorability.py  time_context.py  user_profiles.py
app/src/neobot_app/agents/: __init__.py  chat_interaction.py  creator.py  cross_chat.py  image_parse.py  memory.py  problem_solver.py  scheduled_task.py  willingness.py
app/src/neobot_app/assembly/: __init__.py  agents.py  chat.py  memory.py  storage.py
app/src/neobot_app/audio/: __init__.py  tts.py  volcengine_tts.py
app/src/neobot_app/config/: models.py
app/src/neobot_app/config/loader/: backup.py  converter.py  env.py  manager.py
app/src/neobot_app/config/schemas/: __init__.py  bot.py  env.py
app/src/neobot_app/core/: __init__.py  constants.py  file_server.py  paths.py
app/src/neobot_app/database/: __init__.py  chatstream.py
app/src/neobot_app/emoji/: __init__.py  mapping.py  service.py
app/src/neobot_app/image/: __init__.py  parser.py
app/src/neobot_app/message/: image_pipeline.py  numbering.py  process.py  queue.py  queue_impl.py
app/src/neobot_app/observability/: debug.py  logging.py
app/src/neobot_app/prompt/: __init__.py  builder.py  keyword_reaction.py
app/src/neobot_app/reply/: __init__.py  event.py  markdown_image.py  orchestrator.py  postprocess.py  tools.py
app/src/neobot_app/runtime/: __init__.py  application.py  archive_memory_summary.py  event_pipeline.py  inbound_pipeline.py  notifications.py  reply_block.py  scheduled_tasks.py
app/src/neobot_app/statistics/: __init__.py  balance.py  reporter.py  tracker.py
app/src/neobot_app/toolpackage/: __init__.py  manager.py  web_search_package.py
app/src/neobot_app/toolpackage/web_parser/: __init__.py  extractor.py  models.py  renderer.py  structurer.py
app/src/neobot_app/toolpackage/web_search/: __init__.py  engine.py  manager.py  models.py  session.py
app/src/neobot_app/utils/: data_sync.py  time.py
app/src/neobot_app/willing/: __init__.py  builtin.py  models.py  service.py
app/src/neobot_app/willing/templates/: README.md
app/tests/: test_reply_block.py
scripts/: change_prompt.py  test_creator_drawing_concurrency.py  test_live.py
