[project]
name = "neobot-app"
version = "1.0.0-alpha.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wsrsq", email = "wsrsq001@163.com" },
    { name = "tangtian", email = "a14b@126.com" },
]
requires-python = ">=3.13"
dependencies = [
    "Asyncio",
    "aiohttp",
    "httpx>=0.27.0",
    "loguru",
    "neobot-adapter",
    "neobot-chat",
    "neobot-contracts",
    "neobot-memory",
    "neobot-storage",
    "python-dotenv>=1.2.2",
    "tomlkit",
    "union",
    "lunarcalendar>=0.0.9",
    "pillow>=10.0.0",
]

[tool.uv.sources]
neobot-adapter = { workspace = true }
neobot-chat = { workspace = true }
neobot-contracts = { workspace = true }
neobot-memory = { workspace = true }
neobot-storage = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
