[project]
name = "neobot-app"
version = "1.0.0-alpha.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wsrsq", email = "wsrsq001@163.com" },
    { name = "tangtian", email = "a14b@126.com" },
]
requires-python = ">=3.13"
dependencies = [
    "Asyncio",
    "aiohttp",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
    "loguru",
    "lxml>=5.0.0",
    "markdownify>=1.0.0",
    "neobot-adapter",
    "neobot-chat",
    "neobot-contracts",
    "neobot-memory",
    "neobot-modloader",
    "neobot-storage",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.0",
    "tomlkit",
    "trafilatura>=2.0.0",
    "union",
    "lunarcalendar>=0.0.9",
    "pillow>=10.0.0",
    "pillowmd>=0.7.3",
]

[tool.uv.sources]
neobot-adapter = { workspace = true }
neobot-chat = { workspace = true }
neobot-contracts = { workspace = true }
neobot-memory = { workspace = true }
neobot-modloader = { workspace = true }
neobot-storage = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
